--- a/team.html
+++ b/team.html
@@ -340,7 +340,7 @@
                                     <img src="assets/img/team/Ahmad.png" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Muhammad Ahmad Raza</a></h6>
+                                    <h6>Mr. Muhammad Ahmad Raza</h6>
                                     <p>Founder & CEO</p>
                                 </div>
                                 <div class="team__member__icon">
@@ -376,7 +376,7 @@
                                     <img src="assets/img/team/tahir.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Tahir</a></h6>
+                                    <h6>Mr. Tahir</h6>
                                     <div class="Details">
                                         <p style="margin: 0px;">Principal Software Engineer</p>
                                         <p>Co-Founder</p>
@@ -394,7 +394,7 @@
                                     <img src="assets/img/team/Butt.jpeg" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Nadeem</a></h6>
+                                    <h6>Mr. Nadeem</h6>
                                     <p style="margin: 0px;">Full Stack Mobile Application Developer</p>
                                     <p>CTO</p>
                                 </div>
@@ -409,7 +409,7 @@
                                     <img src="assets/img/team/Abdul-rehman-sb.png" alt="Ahmad">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Abdul Rahman</a></h6>
+                                    <h6>Mr. Abdul Rahman</h6>
                                     <p style="margin: 0px;">Senior Mobile and Web UI/UX Designer</p>
                                     <p>Team Lead</p>
                                 </div>
@@ -426,7 +426,7 @@
                                     <img src="assets/img/team/awais-ali.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Awais Ali</a></h6>
+                                    <h6>Mr. Awais Ali</h6>
                                     <p style="margin: 0px;">Senior Php Laravel Developer</p>
                                     <p>Team Lead</p>
 
@@ -443,7 +443,7 @@
                                     <img src="assets/img/team/daniyal-sb.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Daniyal Amjad</a></h6>
+                                    <h6>Mr. Daniyal Amjad</h6>
                                     <p style="margin: 0px;">Senior Full Stack React.js Developer</p>
                                     <p>Product Manager</p>
 
@@ -459,8 +459,9 @@
                                     <img src="assets/img/team/saif.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Saif-e-Rahman</a></h6>
-                                    <p>Digital Marketing</p>
+                                    <h6>Mr. Saif-e-Rahman</h6>
+                                    <p style="margin: 0px;">Digital Marketing</p>
+                                    <p>Manager</p>
                                 </div>
 
                             </div>
@@ -474,7 +475,7 @@
                                     <img src="assets/img/team/tayyab.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Tayyab Karamat</a></h6>
+                                    <h6>Mr. Tayyab Karamat</h6>
                                     <p>Software Assurance Quality</p>
                                 </div>
 
@@ -490,7 +491,7 @@
                                     <img src="assets/img/team/hamid.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Hamid Raza</a></h6>
+                                    <h6>Mr. Hamid Raza</h6>
                                     <p>Senior UI/UX Designer</p>
                                 </div>
                             </div>
@@ -505,7 +506,7 @@
                                     <img src="assets/img/service/Kashif.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Kashif</a></h6>
+                                    <h6>Mr. Kashif</h6>
                                     <p>Social Media Manager</p>
                                 </div>
                             </div>
@@ -519,8 +520,9 @@
                                     <img src="assets/img/team/awais_ch.png" alt="img">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Awais</a></h6>
-                                    <p>Digital Marketing</p>
+                                    <h6>Mr. Awais</h6>
+                                    <p style="margin: 0px;">Digital Marketing</p>
+                                    <p>CTO</p>
                                 </div>
                             </div>
                         </div>
@@ -534,7 +536,7 @@
                                     <img src="assets/img/team/Shoaib.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Shoaib Jamil</a></h6>
+                                    <h6>Mr. Shoaib Jamil</h6>
                                     <p>Graphic Designer</p>
                                 </div>
                             </div>
@@ -549,7 +551,7 @@
                                     <img src="assets/img/team/saif-content.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Saif</a></h6>
+                                    <h6>Mr. Saif</h6>
                                     <p>Senior Content Creator</p>
                                 </div>
                             </div>
@@ -564,7 +566,7 @@
                                     <img src="assets/img/service/Mr-Saim.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Saim</a></h6>
+                                    <h6>Mr. Saim</h6>
                                     <p>Senior WordPress Developer</p>
                                 </div>
                             </div>
@@ -578,7 +580,7 @@
                                     <img src="assets/img/service/Waleed.png" alt="">
                                 </div>
                                 <div class="team__member__name">
-                                    <h6><a href="javascript:void(0)">Mr. Waleed</a></h6>
+                                    <h6>Mr. Waleed</h6>
                                     <p>IT Specialist</p>
                                 </div>
                             </div>
