--- a/index.html
+++ b/index.html
@@ -250,7 +250,8 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="mobile__log">
                         <a class="offcanvas__logo_link" href="/">
-                            <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode" loading="lazy">
+                            <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode"
+                                loading="lazy">
                             <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                                 class="light-mode" loading="lazy">
                         </a>
@@ -275,7 +276,8 @@
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
                     <a class="offcanvas__logo_link" href="/">
-                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode" loading="lazy">
+                        <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode"
+                            loading="lazy">
                         <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                             class="light-mode" loading="lazy">
                     </a>
@@ -367,7 +369,8 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/ahmad _home-owner.png" alt="Hero Banner" loading="lazy">
+                                            <img src="assets/img/team/slider/ahmad _home-owner.png" alt="Hero Banner"
+                                                loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -393,7 +396,8 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/team/slider/banner_tahir.png" alt="Hero Banner" loading="lazy">
+                                            <img src="assets/img/team/slider/banner_tahir.png" alt="Hero Banner"
+                                                loading="lazy">
                                         </div>
                                     </div>
                                 </div>
@@ -526,9 +530,9 @@
                     <div class="row g-4" style="justify-content: center;">
                         <!-- new service card -->
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="web-development-services" class="text-decoration-none"
+                            <a href="web-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
-                                <div class="card mb-3">
+                                <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
                                             <img src="assets/img/services-home/wb.jpg" class="img-fluid rounded-start"
@@ -549,9 +553,9 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="software-development-services" class="text-decoration-none"
+                            <a href="software-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
-                                <div class="card mb-3">
+                                <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
                                             <img src="assets/img/services-home/soft.jpg" class="img-fluid rounded-start"
@@ -571,9 +575,9 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="game-development-services" class="card mb-3 text-decoration-none text-dark"
+                            <a href="game-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
-                                <div class="card mb-3">
+                                <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
                                             <img src="assets/img/services-home/game.jpg" class="img-fluid rounded-start"
@@ -592,9 +596,9 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="mobile-app-development-services" class="card mb-3 text-decoration-none text-dark"
+                            <a href="mobile-app-development-services" class="mb-3 text-decoration-none"
                                 style="display: block;">
-                                <div class="card mb-3">
+                                <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
                                             <img src="assets/img/services-home/app.jpg" class="img-fluid rounded-start"
@@ -614,9 +618,8 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="seo-services" class="text-decoration-none"
-                                style="display: block;">
-                                <div class="card mb-3">
+                            <a href="seo-services" class="mb-3 text-decoration-none" style="display: block;">
+                                <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
                                             <img src="assets/img/services-home/seo.jpg" class="img-fluid rounded-start"
@@ -636,8 +639,8 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="ui-ux-design" class="text-decoration-none" style="display: block;">
-                                <div class="card mb-3">
+                            <a href="ui-ux-design" class=" mb-3 text-decoration-none" style="display: block;">
+                                <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
                                             <img src="assets/img/services-home/ui.png" class="img-fluid rounded-start"
@@ -658,8 +661,8 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
-                            <a href="network-services" class="text-decoration-none" style="display: block;">
-                                <div class="card mb-3">
+                            <a href="network-services" class=" mb-3 text-decoration-none" style="display: block;">
+                                <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
                                             <img src="assets/img/services-home/it.jpg" class="img-fluid rounded-start"
@@ -681,8 +684,8 @@
                             </a>
                         </div>
                         <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
-                            <a href="content-creater" class="text-decoration-none" style="display: block;">
-                                <div class="card mb-3">
+                            <a href="content-creater" class="mb-3 text-decoration-none" style="display: block;">
+                                <div class="card">
                                     <div class="row g-0">
                                         <div class="col-md-4">
                                             <img src="assets/img/services-home/Content.jpg"
@@ -754,7 +757,8 @@
                 <div class="row">
                     <div class="col-xl-7 col-lg-7 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="about__img__wrapper position-relative" data-tilt>
-                            <img class="about__img__1" src="assets/img/project/combine-pic.png" alt="img" loading="lazy">
+                            <img class="about__img__1" src="assets/img/project/combine-pic.png" alt="img"
+                                loading="lazy">
                             <div class="about__number">
                                 <div class="about__number__inner about__number__position">
                                     <span>29</span>
@@ -1100,7 +1104,8 @@
                             data-aos-duration="1500">
                             <div class="project__single single__transform">
                                 <div class="project__imgs">
-                                    <img src="assets/img/project/project__2.webp" alt="img" loading="lazy" style="max-width: 100%;">
+                                    <img src="assets/img/project/project__2.webp" alt="img" loading="lazy"
+                                        style="max-width: 100%;">
                                 </div>
 
                             </div>
@@ -1126,7 +1131,8 @@
                                             </div>
                                             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                                                 <div class="project__bottom__img text-center">
-                                                    <img src="assets/img/project/project__small__img__2.png" alt="img" loading="lazy">
+                                                    <img src="assets/img/project/project__small__img__2.png" alt="img"
+                                                        loading="lazy">
                                                 </div>
                                             </div>
 
@@ -1137,9 +1143,10 @@
                         </div>
                     </div>
                     <div class="project__small__img">
-                        <img class="project__img__1" src="assets/img/project/project__small__img.png" alt="img" loading="lazy">
-                        <img class="project__img__2" src="assets/img/project/project__small__img__1.png"
-                            alt="img" loading="lazy">
+                        <img class="project__img__1" src="assets/img/project/project__small__img.png" alt="img"
+                            loading="lazy">
+                        <img class="project__img__2" src="assets/img/project/project__small__img__1.png" alt="img"
+                            loading="lazy">
                     </div>
                 </div>
             </div>
@@ -1191,7 +1198,8 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__4.png" alt="img" loading="lazy">
+                                            <img src="assets/img/testimonial/testimonial__4.png" alt="img"
+                                                loading="lazy">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="javascript:void(0)">Mattie Warner</a></h6>
@@ -1220,7 +1228,8 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__5.png" alt="img" loading="lazy">
+                                            <img src="assets/img/testimonial/testimonial__5.png" alt="img"
+                                                loading="lazy">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="javascript:void(0)">Kristin Gilbert</a></h6>
@@ -1248,7 +1257,8 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__6.png" alt="img" loading="lazy">
+                                            <img src="assets/img/testimonial/testimonial__6.png" alt="img"
+                                                loading="lazy">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="javascript:void(0)">Arlene Miles</a></h6>
@@ -1276,7 +1286,8 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__7.jpg" alt="img" loading="lazy">
+                                            <img src="assets/img/testimonial/testimonial__7.jpg" alt="img"
+                                                loading="lazy">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="javascript:void(0)">Richard W. Thomas</a></h6>
@@ -1305,7 +1316,8 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/1724692476765.jpg" alt="img" loading="lazy">
+                                            <img src="assets/img/testimonial/1724692476765.jpg" alt="img"
+                                                loading="lazy">
                                         </div>
                                         <div class="testimonial__3__name color__black">
                                             <h6><a href="javascript:void(0)">Shelley Zalis</a></h6>
@@ -1513,8 +1525,10 @@
                 <div class="bastun__brand__badge__inner position-relative">
                     <a href="/">
 
-                        <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge" loading="lazy">
-                        <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge" loading="lazy">
+                        <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge"
+                            loading="lazy">
+                        <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge"
+                            loading="lazy">
                     </a>
                 </div>
             </div>
@@ -1697,9 +1711,39 @@
             });
         });
     </script>
+    <script>
+        // Function to load the image
+        function loadImage(image) {
+            const src = image.getAttribute('data-src'); // Get the image source from the data-src attribute
+            image.src = src;  // Set the actual source to load the image
+            image.classList.remove('lazy');  // Optionally remove the lazy class
+        }
+
+        // Create an IntersectionObserver to observe when images enter the viewport
+        const observer = new IntersectionObserver((entries, observer) => {
+            entries.forEach(entry => {
+                // If the image is in the viewport, load it
+                if (entry.isIntersecting) {
+                    loadImage(entry.target);
+                    observer.unobserve(entry.target); // Stop observing this image
+                }
+            });
+        }, {
+            rootMargin: '0px', // You can set a margin if you want to start loading the image before it's fully in the viewport
+            threshold: 0.1 // 10% of the image must be in the viewport to trigger loading
+        });
+
+        // Select all lazy-loaded images
+        const images = document.querySelectorAll('.lazy');
+
+        // Start observing each image
+        images.forEach(image => {
+            observer.observe(image);
+        });
+
+    </script>
 
     <script>
-
         // On page load or when changing themes, best to add inline in `head` to avoid FOUC
         if (localStorage.getItem("theme-color") === "dark" || (!("theme-color" in localStorage) && window.matchMedia("(prefers-color-scheme: dark)").matches)) {
             document.getElementById("light--to-dark-button")?.classList.add("dark--mode");
